# starve

./: .env.example  .gitignore  README.md  TODO  pyproject.toml  requirements.txt  run.py  theProblem.md
config/: __init__.py  settings.py
data/raw/: sample_wiki_pages.json
mod/: README.md  modicon.tex  modicon.xml  modinfo.lua  modmain.lua
mod/bridge/: generate_icon.py  http_bridge.py  png_to_tex.py  setup_fonts.py
mod/fonts/: README.md
mod/scripts/components/: rag_assistant.lua
mod/scripts/screens/: rag_settings_screen.lua
mod/scripts/utils/: config_manager.lua  http_bridge.lua
mod/scripts/widgets/: rag_chat_window.lua  rag_input_box.lua  rag_message_list.lua  rag_settings.lua
scripts/: batch_crawl.py  integrate_data.py  run.sh
src/: __init__.py
src/app/: __init__.py  api.py  main.py  streamlit_app.py
src/crawler/: __init__.py  base.py  factory.py  main.py  mediawiki_crawler.py  parser.py  pipeline.py  steam_crawler.py  tieba_crawler.py  wiki_crawler.py
src/crawler/cleaners/: __init__.py  base.py  mediawiki_cleaner.py  normalizer.py  quality.py  steam_cleaner.py  tieba_cleaner.py
src/indexer/: __init__.py  document_processor.py  indexer.py  main.py
src/qa/: __init__.py  llm_factory.py  model_comparator.py  prompts.py  qa_engine.py  session.py
src/retriever/: __init__.py  bm25.py  cache.py  fusion.py  mmr.py  query_processor.py  reranker.py  retriever.py
src/utils/: __init__.py  logger.py  models.py
tests/: conftest.py
tests/app/: test_api.py
tests/crawler/: test_base.py  test_batch_crawl.py  test_cleaner_base.py  test_cleaners.py  test_crawler.py  test_error_handling.py  test_mediawiki.py  test_parser.py  test_pipeline.py  test_steam.py  test_tieba.py
tests/crawler/fixtures/: __init__.py  mock_data.py  mock_responses.py
tests/indexer/: test_indexer.py
tests/integration/: __init__.py  test_crawler_to_rag.py  test_multi_turn_integration.py
tests/qa/: test_llm_factory.py  test_model_comparator.py  test_multi_turn.py  test_qa.py  test_session.py
tests/retriever/: test_bm25.py  test_cache.py  test_fusion.py  test_mmr.py  test_query_processor.py  test_retriever.py
tests/utils/: test_models.py
